--- a/addbook.html
+++ b/addbook.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#ffbe74">
-
+    <meta name="icon" href='Images\icons8-books-48.png' type="image/png">
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Limelight&display=swap"
